objects/Associated_Contact__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associated Contacts</relationshipLabel>
        <relationshipName>Associated_Contacts</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RelatedOpportunity__c</fullName>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Associated Contacts</relationshipLabel>
        <relationshipName>Associated_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Associated Contact</label><nameField>
        <displayFormat>con-{YYYY}{MM}{0000}</displayFormat>
        <label>Associated Contact Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Associated Contacts</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>